# SlothusSeeker

./: .env.example  .gitignore  CLAUDE.md  EMBED_PREVIEW.md  README.md  main.py  preview_embeds.py  pyproject.toml
src/bot/: bot.py  embeds.py
src/bot/commands/: config.py
src/config/: config_manager.py  settings.py
src/scheduler/: tasks.py
src/scraper/: data_models.py  exceptions.py  github_client.py
src/utils/: logger.py  retry.py
tests/: conftest.py  test_config_manager.py  test_data_models.py  test_github_client.py
